--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,6 @@
         <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>hi friend!</h1>
-        <h1>hi friend!</h1>
-        <h1>hi friend!</h1>
-        <h1>hi friend!</h1>
+        <h1>POTATO SAYS HI</h1>
     </body>
 </html>
