--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
-<html lang="en">
-    <head>
-        <title>Web Page</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link href="style.css" rel="stylesheet"/>
-    </head>
-    <body>
-        <h1>POTATO SAYS HI</h1>
-    </body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>P5 !</title>
+    <link href="style.css" rel="stylesheet"></link>
+  </head>
+  <body>
+    <script src="p5.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
