--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>P5 !</title>
+    <title>Raafat Turki</title>
     <link href="style.css" rel="stylesheet"></link>
   </head>
   <body>
