--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -5,7 +6,7 @@
     <link href="style.css" rel="stylesheet"></link>
   </head>
   <body>
-    <script src="p5.js"></script>
+    <script src="p5.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
